syntax = "proto3";

option go_package = "github.com/openziti/zrok/controller/secretsGrpc";

service Secrets {
  rpc FetchSecrets(SecretsRequest) returns (SecretsResponse) {}
}

message Secret {
  string key = 1;
  string value = 2;
}

message SecretsRequest {
  string shareToken = 1;
}

message SecretsResponse {
  repeated Secret secrets = 1;
}